--- a/application/views/CoursesView.fxml
+++ b/application/views/CoursesView.fxml
@@ -118,7 +118,7 @@
                 <Pane id="pane1" fx:id="addCoursePane" layoutX="415.0" layoutY="61.0" prefHeight="424.0" prefWidth="352.0" stylesheets="@../Style/Darktheme.css" visible="false">
                     <children>
                         <TextField fx:id="courseName" layoutX="24.0" layoutY="28.0" prefHeight="48.0" prefWidth="303.0" promptText="Course name" />
-                        <TextField fx:id="profName" layoutX="24.0" layoutY="91.0" prefHeight="48.0" prefWidth="303.0" promptText="Prof Name" />
+<!--                        <TextField fx:id="profName" layoutX="24.0" layoutY="91.0" prefHeight="48.0" prefWidth="303.0" promptText="Prof Name" />-->
                         <ComboBox fx:id="courseType" layoutX="24.0" layoutY="155.0" prefHeight="41.0" prefWidth="303.0" promptText="Choose Type" />
                         <DatePicker fx:id="courseDate" layoutX="24.0" layoutY="212.0" prefHeight="48.0" prefWidth="303.0" promptText="Date" />
                         <Button layoutX="24.0" layoutY="349.0" mnemonicParsing="false" onAction="#DoneClicked" prefHeight="48.0" prefWidth="136.0" text="ADD" />
